# semdesk

./: .gitignore  Cargo.toml  README.md
.cargo/: config.toml
src/: catalog.rs  cli.rs  crawler.rs  error.rs  idgenerator.rs  indexer.rs  main.rs  parsers.rs  query_processor.rs  retriever.rs  settings.rs
