[package]
name = "semdesk"
version = "0.0.1"
edition = "2021"
authors = ["Sureshkumar T <tsureshkumar2000@gmail.com>"]
description = "Semantic Desktop Search - search for answers not file names"
repository = "https://github.com/tsureshkumar/semdesk/"
license = "Apache-2.0"
readme = "README.md"
keywords = ["search", "semantic", "desktop", "natural language processing", "nlp", "machine learning", "ml", "deep learning", "dl", "rust", "rustlang", "rust-lang", "bert"]

[[bin]]
name = "semdesk"
path = "src/main.rs"

[[bin]]
name = "semdesk-cli"
path = "src/cli.rs"

[dependencies]
pdf-extract = "0.6.4"
rand = "0.8.3"
sha256 = "1.1.2"
faiss = "0.12.0"
tch = "0.10.1"
rust-bert = "0.20.0"
dirs = "5.0.0"
lazy_static = "1.4.0"
config = "0.13.3"
rusqlite = "0.26.0"
serde = { version = "1.0.160", features = ["derive"] }
serde_json = "1.0.70"
serde_yaml = "0.8.23"
sled = "0.34.7"
mime_guess = "2.0.4"
pdf = "0.8.1"
ndarray = { version = "0.15.0", features = ["blas"] }
blas-src = { version = "0.8", features = ["openblas"] }
openblas-src = { version = "0.10", features = ["cblas", "system"] }
log = "0.4.14"
env_logger = "0.9.0"
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
which = "4.4.0"
clap = { version = "4.2.4", features = ["derive"] }
chrono = "0.4.24"
nnsplit = "0.5.9"
